<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_homepage"
            android:title="@string/menu_home" />



        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_worlwide"
            android:title="@string/language" />

        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/reminder" />


        <item
            android:id="@+id/nav_coin"
            android:icon="@drawable/ic_drawer_coin"
            android:title="@string/coins" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"
            android:visible="true" />


    </group>



</menu>
