<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="?attr/theme_cell_color"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/select_operation"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="?attr/colorPrimary" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/sun"
                    android:textColor="?attr/theme_text_color" />

                <CheckBox
                    android:id="@+id/cb_mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/mon"
                    android:textColor="?attr/theme_text_color" />

                <CheckBox
                    android:id="@+id/cb_tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/tue"
                    android:textColor="?attr/theme_text_color" />

                <CheckBox
                    android:id="@+id/cb_wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/wed"
                    android:textColor="?attr/theme_text_color" />

                <CheckBox
                    android:id="@+id/cb_thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/thu"
                    android:textColor="?attr/theme_text_color" />

                <CheckBox
                    android:id="@+id/cb_fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/fri"
                    android:textColor="?attr/theme_text_color" />

                <CheckBox
                    android:id="@+id/cb_sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:button="@drawable/custom_radio_button"
                    android:checked="true"
                    android:text="@string/sat"
                    android:textColor="?attr/theme_text_color" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/cell_cyan"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_cyan"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/ok"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
