<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.elmuj.learnmath.utils.CenteredToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@null"
                android:fontFamily="@font/myriadpro_bold"
                android:gravity="center"
                android:text="@string/select_difficulty"
                android:textColor="?attr/theme_text_color"
                android:textSize="@dimen/txt_size" />


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_easy"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/dp_8"
                app:cardBackgroundColor="?attr/theme_cell_color"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/text_easy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:text="@string/easy"
                    android:textColor="?attr/theme_text_color" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_medium"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/dp_8"
                app:cardBackgroundColor="?attr/theme_cell_color"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/text_medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:text="@string/medium"
                    android:textColor="?attr/theme_text_color" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_hard"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/dp_8"
                app:cardBackgroundColor="?attr/theme_cell_color"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/text_hard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center"
                    android:text="@string/hard"
                    android:textColor="?attr/theme_text_color" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </RelativeLayout>
</LinearLayout>