<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:qwerjk="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="20dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/learn_quiz_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:fontFamily="@font/myriadpro_bold"
                    android:includeFontPadding="false"
                    android:padding="5dp"
                    android:text="@string/rate_your_experience"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myriadpro_bold"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/rate_msg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="-2dp"
                android:layout_marginRight="-2dp"
                android:layout_weight="1"
                android:background="?attr/feedback_icon"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">


                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/MyRatingBarTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/cell_cyan"
                    android:fontFamily="@font/myriadpro_bold"
                    android:includeFontPadding="false"
                    android:padding="8dp"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/myriadpro_bold"
                    android:text="@string/no_thanks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?attr/theme_text_color"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</LinearLayout>